--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ cache:
     - $HOME/.sbt
 
 before_install:
-  - "test -z \"$encrypted_8f8fd3411df9_key\" || openssl aes-256-cbc -K $encrypted_8f8fd3411df9_key -iv $encrypted_8f8fd3411df9_iv -in project/ci.asc.enc -out project/ci.asc -d
+  - "test -z \"$encrypted_8f8fd3411df9_key\" || openssl aes-256-cbc -K $encrypted_8f8fd3411df9_key -iv $encrypted_8f8fd3411df9_iv -in project/ci.asc.enc -out project/ci.asc -d"
 
 stages:
   - name: test
