--- a/.travis.yml
+++ b/.travis.yml
@@ -17,18 +17,20 @@ before_install:
   - "test -z \"$encrypted_8f8fd3411df9_key\" || openssl aes-256-cbc -K $encrypted_8f8fd3411df9_key -iv $encrypted_8f8fd3411df9_iv -in project/ci.asc.enc -out project/ci.asc -d"
 
 stages:
+  - name: lint
   - name: test
   - name: publish
     if: branch = master AND type = push
 
 jobs:
   include:
-    - stage: test
+    - stage: lint
       name: "Check source code formatting"
       script: sbt ++$TRAVIS_SCALA_VERSION scalafmtCheck test:scalafmtCheck scalafmtSbtCheck
     - &test
       stage: test
       name: "Build and test for Scala 2.12"
+      before_script: gpg --import project/ci.asc
       script: sbt ++$TRAVIS_SCALA_VERSION test package packageSrc publishLocal
     - <<: *test
       scala: 2.11.12
