Do sonatypeOpen before publish in CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ jobs:
       stage: publish
       name: "Publish for Scala 2.12"
       before_script: gpg --import project/ci.asc
-      script: sbt ++$TRAVIS_SCALA_VERSION publish releaseIfNotSnapshot
+      script: sbt ++$TRAVIS_SCALA_VERSION sonatypeOpenIfNotSnapshot publish sonatypeReleaseIfNotSnapshot
     - <<: *publish
       scala: 2.11.12
       name: "Publish for Scala 2.11"
